# RFE

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: CODEMAP.md
src/facturx_generator/: __init__.py  cii.py  cli.py  generator.py  mapping.py  models.py  profiles.py  ubl.py
src/facturx_generator/bt_core/: __init__.py  cii_export.py  enums.py  mapping.py  mapping_data.json  model.py  profiles_matrix.py  validation.py
tests/: test_cii.py  test_models.py  test_ubl.py
tests/bt_core/: test_cii_export.py  test_mapping.py  test_model.py  test_profiles_matrix.py  test_validation.py
tools/: export_project.py  generate_changelog.py
